--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <ul>
     {% for post in paginator.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 
 <nav class="pagination" role="navigation">
     {% if paginator.previous_page %}
-    <a class="previous pagination__newer btn btn-small btn-tertiary" href="{project_1}">&larr; 上一页</a>
+    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1/">&larr; 上一页</a>
     {% endif %}
     <span class="page_num pagination__page-number">{{ paginator.page }} / {{ paginator.total_pages }}</span>
     {% if paginator.next_page %}
-    <a class="next pagination__older btn btn-small btn-tertiary" href="{project_1}">下一页 &rarr;</a>
+    <a class="next pagination__older btn btn-small btn-tertiary" href="project_2/">下一页 &rarr;</a>
     {% endif %}
 </nav>
