--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 </ul>
 
 <nav class="pagination" role="navigation">
-    {% if paginator.previous_page %}
-    <a class="previous pagination__newer btn btn-small btn-tertiary" href="{{ paginator.previous_page_path }}">&larr; 手勢辨識</a>
-    {% endif %}
-    <br>
-    {% if paginator.next_page %}
-    <a class="next pagination__older btn btn-small btn-tertiary" href="{{ paginator.next_page_path }}">基於深度學習模型於前景注意力之行人重識別系統 &rarr;</a>
-    {% endif %}
+    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1/README.md">&larr; 手勢辨識</a>
+    <span class="page_num pagination__page-number">{{ paginator.page }} / {{ paginator.total_pages }}</span>
+    <a class="next pagination__older btn btn-small btn-tertiary" href="project_2/README.md">基於深度學習模型於前景注意力之行人重識別系統 &rarr;</a>
 </nav>
