--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 <nav class="pagination" role="navigation">
     {% if paginator.previous_page %}
-    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1/README.md">&larr; 上一页</a>
+    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1/">&larr; 上一页</a>
     {% endif %}
     <span class="page_num pagination__page-number">{{ paginator.page }} / {{ paginator.total_pages }}</span>
     {% if paginator.next_page %}
-    <a class="next pagination__older btn btn-small btn-tertiary" href="{{ paginator.next_page_path }}">下一页 &rarr;</a>
+    <a class="next pagination__older btn btn-small btn-tertiary" href="project_2/">下一页 &rarr;</a>
     {% endif %}
 </nav>
