--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <ul>
     {% for post in paginator.posts %}
-    <li><a href="https://liangying1026.github.io/">{{ post.title }}</a></li>
+    <li><a href="root">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 
