--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </ul>
 
 <nav class="pagination" role="navigation">
-    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1">&larr; 上一页</a>
-    <span class="page_num pagination__page-number">{{ paginator.page }} / {{ paginator.total_pages }}</span>
-    <a class="next pagination__older btn btn-small btn-tertiary" href="project_2">下一页 &rarr;</a>
+    <a class="previous pagination__newer btn btn-small btn-tertiary" href="project_1"> 上一页</a>
+    <br>
+    <a class="next pagination__older btn btn-small btn-tertiary" href="project_2">下一页 </a>
 </nav>
